# synaesthesia

./: CMakeLists.txt  LICENSE  README.md  config.json  pyproject.toml
include/synaesthesia-cam/: conn.hpp  factory.hpp  mask.hpp  music.hpp  runner.hpp
src/synaesthesia/: camera.py  colors.py  gui.py  instruments.py  music.py  qt.py  run.py
src/synaesthesia-cam/: conn.cpp  factory.cpp  main.cpp  music.cpp  runner.cpp
