[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synaesthesia"
version = "1.0"
dependencies = [
  "python-rtmidi",
  "pedalboard",
  "mido",
]
requires-python = ">=3.8"
authors = [
  {name = "Firemark"},
]
maintainers = [
  {name = "Firemark"}
]
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = []
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
syn-gui = "synaesthesia.qt:main"

#[project.gui-scripts]
#spam-gui = "spam:main_gui"
